allow lookup of a contact by email or id
